fix: aligned the post text to the left

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -17,6 +17,8 @@
   gap: 10px;
   margin-bottom: 15px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: left;
+  padding-left: 5px;
 }
 
 .pic {
